# greentips-sustainable-p2

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md  tip.md
greentips/: language_detection.py  main.py  tips.json  tips.py
greentips/analyzers/: __init__.py  python_static.py
