[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greentips"
version = "0.0.2"
description = "A sustainability tip generator for developers."
requires-python = ">=3.12"

dependencies = [
    "typer>=0.9.0",
    "numpy>=1.24.0",
]

[project.scripts]
greentips = "greentips.main:app"